# heist-template-loop-demo

./: .gitignore  heist-template-loop-demo.cabal  stack.yaml
snaplets/heist/templates/: list_test_entries.tpl
src/: Site.hs
