name: heist-template-loop-demo
version: 0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
maintainer: maintainer@example.com
stability: Experimental
synopsis: Project Synopsis Here
description: Project Description Here
category: Web
author: Author
data-dir: ""

flag development
    Description:  Whether to build the server in development (interpreted) mode
    Default: False

flag old-base
    Default: False

executable heist-template-loop-demo
    build-depends: bytestring >=0.9.1 && <0.11, heist >=0.13 && <0.14,
                   MonadCatchIO-transformers >=0.2.1 && <0.4, mtl >=2 && <3,
                   snap >=0.13 && <0.14, snap-core >=0.9 && <0.11,
                   snap-server >=0.9 && <0.11, snap-loader-static >=0.9 && <0.10,
                   text >=0.11 && <1.2, time >=1.1 && <1.5, xmlhtml >=0.1, transformers >=0.3

    if flag(old-base)
        build-depends: base >=4 && <4.4, lens >=3.7.6 && <3.8
        buildable: True
    else
        build-depends: base >=4.4 && <5, lens >=3.7.6 && <4.2
        buildable: True

    if flag(development)
        build-depends: snap-loader-dynamic ==0.10.*
        buildable: True
        cpp-options: -DDEVELOPMENT
        ghc-options: -threaded -w
    else

        if impl(ghc >=6.12.0)
            buildable: True
            ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -fno-warn-orphans -fno-warn-unused-do-bind
        else
            buildable: True
            ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -fno-warn-orphans
        buildable: True
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Application Site

