name: heist-template-loop-demo
version: 0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
maintainer: maintainer@example.com
stability: Experimental
synopsis: Project Synopsis Here
description: Project Description Here
category: Web
author: Author
data-dir: ""

flag development
    Description:  Whether to build the server in development (interpreted) mode
    Default: False

flag old-base
    Default: False

executable heist-template-loop-demo
    build-depends:  base
                  , heist
                  , bytestring
                  , transformers
                  , text
                  , snap, snap-core, snap-server, snap-loader-static
                  , lens
    main-is:        Main.hs
    other-modules:  Site, Application
    ghc-options:    -Wall
    buildable:      True
    hs-source-dirs: src
    other-modules:  Application Site

